<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_layout"
    style="@style/ios_dialog_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/iosdialog_bg"
    app:cardBackgroundColor="@color/colorTranc"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@drawable/iosdialog_bg"
    android:scrollbarThumbVertical="@drawable/iosdialog_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/about_add_card"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="ifContentScrolls">

            <!-- 如果没有这个layout，会导致TextView显示大量文本错位的问题 -->
            <LinearLayout
                android:id="@+id/message_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_add_card2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/about_add_card"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/about_add_card1"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_add_card" />

                <EditText
                    android:id="@+id/editText"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:ems="10"
                    android:gravity="center_vertical|center_horizontal"
                    android:inputType="none"
                    android:singleLine="true"
                    android:text="Name"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/about_add_card2"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />

                <EditText
                    android:id="@+id/summPurchases2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/about_add_card3"
                    android:inputType="number"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <ImageButton
                    android:id="@+id/img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#00FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/summPurchases"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="10dp"
        android:background="#6F5A5959" />

    <LinearLayout
        android:id="@+id/btns_panel"
        style="@style/ios_dialog_style"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/iosdialog_left_btn_selector"
            android:padding="10dp"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="#FF037BFF"
            android:textSize="16sp" />

        <View
            android:id="@+id/vertical_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#6F5A5959"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/iosdialog_right_btn_selector"
            android:padding="10dp"
            android:text="Ok"
            android:textAllCaps="false"
            android:textColor="#FF037BFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>